completed subject maintenance